@@ -2683,8 +2683,8 @@ class RDoc::Parser::Ruby < RDoc::Parser
   end
 
   def remove_private_comments(comment)
-    comment.gsub!(/^#--.*?^#\+\+/m, '')
-    comment.sub!(/^#--.*/m, '')
+    comment.gsub!(/^#--\n.*?^#\+\+/m, '')
+    comment.sub!(/^#--\n.*/m, '')
   end
 
   def remove_token_listener(obj)
